--- a/ui/src/app/data-explorer/components/widgets/map/config/map-widget-config.component.html
+++ b/ui/src/app/data-explorer/components/widgets/map/config/map-widget-config.component.html
@@ -30,24 +30,40 @@
                         (changeSelectedProperty)="setSelectedLongitudeProperty($event)">
     </sp-select-property>
 
-    <sp-select-properties
-        label="Tooltip Content"
-        multiple=true
-        (changeSelectedProperties)="setSelectedToolTipContent($event)"
-        [availableProperties]="fieldProvider.allFields"
-        [selectedProperties]="currentlyConfiguredWidget.visualizationConfig.selectedToolTipContent">
-    </sp-select-properties>
+    <h5>Map Zoom</h5>
+    <mat-form-field fxFlex="100" color="accent">
+        <mat-label>
+            <!-- <mat-icon>Zoom</mat-icon> -->
+            <span>enter zoom value</span></mat-label>
+        <input [(ngModel)]="currentlyConfiguredWidget.visualizationConfig.selectedZoomValue" matInput (input)="setZoomValue($event.target.value)">
+    </mat-form-field>
 
+    <h5>Map Focus</h5>
+    <mat-checkbox [(ngModel)]="currentlyConfiguredWidget.visualizationConfig.focusLastEvent" (change)="setUseLastEventCoordinations($event)">focus on last event
+    </mat-checkbox>
+    
+    <h5>Marker or Trace</h5>
     <mat-form-field color="accent" fxFlex="100">
-        <mat-label>Marker or Trace</mat-label>
+        <!-- <mat-label>Marker or Trace</mat-label> -->
         <mat-select [(value)]="currentlyConfiguredWidget.visualizationConfig.selectedMarkerOrTrace" (selectionChange)="triggerViewRefresh()">
             <mat-option [value]="'marker'">Marker</mat-option>
             <mat-option [value]="'trace'">Trace</mat-option>
         </mat-select>
     </mat-form-field>
 
-    <mat-form-field color="accent" fxFlex="100">
-        <mat-label>Marker Type</mat-label>
+    <h5 *ngIf="currentlyConfiguredWidget.visualizationConfig.selectedMarkerOrTrace === 'marker'">Tooltip Content</h5>
+    <sp-select-properties
+        label="Tooltip Content"
+        multiple=true
+        (changeSelectedProperties)="setSelectedToolTipContent($event)"
+        [availableProperties]="fieldProvider.allFields"
+        [selectedProperties]="currentlyConfiguredWidget.visualizationConfig.selectedToolTipContent" 
+        *ngIf="currentlyConfiguredWidget.visualizationConfig.selectedMarkerOrTrace === 'marker'">
+    </sp-select-properties>
+
+    <h5 *ngIf="currentlyConfiguredWidget.visualizationConfig.selectedMarkerOrTrace === 'marker'">Marker Type</h5>
+    <mat-form-field color="accent" fxFlex="100" *ngIf="currentlyConfiguredWidget.visualizationConfig.selectedMarkerOrTrace === 'marker'">
+        <!-- <mat-label>Marker Type</mat-label> -->
         <mat-select [(value)]="currentlyConfiguredWidget.visualizationConfig.selectedMarkerType" (selectionChange)="triggerViewRefresh()">
             <mat-option [value]="'pin'">Pin</mat-option>
             <mat-option [value]="'car'">Car</mat-option>
