[STREAMPIPES-427] Add streampipes-rest-core-base module, extract AuthGuardedResource to separate module, refactor pipeline API

--- a/ui/src/app/pipelines/pipelines.component.html
+++ b/ui/src/app/pipelines/pipelines.component.html
@@ -17,7 +17,7 @@
   -->
 
 <div fxLayout="column" class="page-container">
-    <div fxLayout="row" class="border sp-tab-bg" style="padding:0px;">
+    <div fxLayout="row" class="border sp-tab-bg" style="padding:0;">
         <div fxFlex="100" class="page-container-nav">
             <div fxFlex="100" fxLayout="row">
                 <button mat-button mat-flat-button color="accent" (click)="showPipelineCategoriesDialog()">Manage Categories</button>
