map widget clean-up for config html

--- a/ui/src/app/data-explorer/components/widgets/map/config/map-widget-config.component.html
+++ b/ui/src/app/data-explorer/components/widgets/map/config/map-widget-config.component.html
@@ -39,7 +39,7 @@
     </mat-form-field>
 
     <h5>Map Focus</h5>
-    <mat-checkbox [(ngModel)]="currentlyConfiguredWidget.visualizationConfig.focusLastEvent" (change)="setUseLastEventCoordinations($event)">focus on last event
+    <mat-checkbox [(ngModel)]="currentlyConfiguredWidget.visualizationConfig.useLastEventCoordinates" (change)="setUseLastEventCoordinations($event)">focus on last event
     </mat-checkbox>
     
     <h5>Marker or Trace</h5>
