--- a/ui/src/app/data-explorer/components/designer-panel/visualisation-settings/data-explorer-visualisation-settings.component.html
+++ b/ui/src/app/data-explorer/components/designer-panel/visualisation-settings/data-explorer-visualisation-settings.component.html
@@ -40,6 +40,11 @@
                     [currentlyConfiguredWidget]="currentlyConfiguredWidget">
             </sp-data-explorer-map-widget-config>
         </div>
+        <div *ngIf="currentlyConfiguredWidget.widgetType === 'calendar-heatmap'" class="h-100 p-0">
+            <sp-data-explorer-calendar-heatmap-widget-config
+                    [currentlyConfiguredWidget]="currentlyConfiguredWidget">
+            </sp-data-explorer-calendar-heatmap-widget-config>
+        </div>
         <div *ngIf="currentlyConfiguredWidget.widgetType === 'line-chart'" class="h-100 p-0">
             <sp-data-explorer-line-chart-widget-config
                     [currentlyConfiguredWidget]="currentlyConfiguredWidget">
