[STREAMPIPES-426] Use JWT for auth token exchange

--- a/ui/src/app/core/components/streampipes/streampipes.component.html
+++ b/ui/src/app/core/components/streampipes/streampipes.component.html
@@ -16,7 +16,7 @@
   ~
   -->
 
-<div [ngClass]="authStatusService.darkMode ? 'dark-mode base-style' : 'light-mode base-style'">
+<div [ngClass]="darkMode ? 'dark-mode base-style' : 'light-mode base-style'">
     <div class="sp-toolbar-outer">
         <toolbar></toolbar>
     </div>
