--- a/ui/src/app/pipelines/dialog/pipeline-status/pipeline-status-dialog.component.html
+++ b/ui/src/app/pipelines/dialog/pipeline-status/pipeline-status-dialog.component.html
@@ -17,37 +17,39 @@
 
 <div class="sp-dialog-container">
     <div class="sp-dialog-content p-15">
-        <div fxFlex="100" fxLayoutAlign="center center" fxLayout="column" *ngIf="operationInProgress">
-            <div fxLayoutAlign="center">
-                <mat-spinner color="accent"
-                             [diameter]="50"
-                             fxLayoutAlign="center"
-                             style="margin: 10px 0 5px 0">{{action == 0 ? "Starting..." : "Stopping"}}
-                </mat-spinner>
-            </div>
-            <div fxLayoutAlign="center">
-                <h3>Please wait while the pipeline is {{action == 0 ? "starting..." : "stopping"}}...</h3>
-            </div>
-        </div>
-        <div *ngIf="!operationInProgress && forceStopActive" fxLayout="column" fxLayoutAlign="center center"
-             fxFlex="100">
-            <div class="success-message" fxFlex="100" fxLayoutAlign="center center" fxLayout="column">
-                <div fxLayout="row">
-                    <mat-icon color="accent">done</mat-icon>
-                    <span>&nbsp;Forced stop successful</span>
+        <div class="sp-dialog-content p-15" fxLayout="column" fxLayoutAlign="center center" fxFlex="100">
+            <div fxFlex="100" fxLayoutAlign="center center" fxLayout="column" *ngIf="operationInProgress">
+                <div fxFlex="100" fxLayoutAlign="center center">
+                    <mat-spinner color="accent"
+                                 [diameter]="50"
+                                 fxLayoutAlign="center"
+                                 style="margin: 10px 0 5px 0">{{action == 0 ? "Starting..." : "Stopping"}}
+                    </mat-spinner>
+                </div>
+                <div fxFlex="100" fxLayoutAlign="center center" fxLayout="column">
+                    <h3>Please wait while the pipeline is {{action == 0 ? "starting..." : "stopping"}}...</h3>
                 </div>
             </div>
-        </div>
 
-        <div fxLayout="column" fxLayoutAlign="center center" fxFlex="100">
+            <div *ngIf="!operationInProgress && forceStopActive" fxLayout="column" fxLayoutAlign="center center"
+                 fxFlex="100">
+                <div class="success-message" fxFlex="100" fxLayoutAlign="center center" fxLayout="column">
+                    <div fxLayout="row">
+                        <mat-icon color="accent">done</mat-icon>
+                        <span>&nbsp;Forced stop successful</span>
+                    </div>
+                </div>
+            </div>
+
             <sp-pipeline-started-status
                     *ngIf="!operationInProgress && !forceStopActive"
                     [pipelineOperationStatus]="pipelineOperationStatus"
                     [action]="action"
-                    (forceStopPipelineEmitter)="forceStopPipeline()">
+                    (forceStopPipelineEmitter)="forceStopPipeline()"
+                    fxLayout="column" fxLayoutAlign="center center" fxFlex="100">
             </sp-pipeline-started-status>
-        </div>
 
+        </div>
     </div>
 
     <mat-divider></mat-divider>
