--- a/ui/src/app/core-ui/static-properties/static-secret-input/static-secret-input.component.html
+++ b/ui/src/app/core-ui/static-properties/static-secret-input/static-secret-input.component.html
@@ -18,19 +18,20 @@
 
 <div [formGroup]="parentForm" id="formWrapper" fxFlex="100" fxLayout="column">
     <div fxFlex="100" fxLayout="row">
-            <mat-form-field fxFlex >
-                <input type="password"
-                       fxFlex
-                       formControlName="{{fieldName}}"
-                       matInput
-                       [placeholder]="staticProperty.label"
-                       required
-                       (blur)="emitUpdate()">
-                <mat-hint>{{staticProperty.description}}</mat-hint>
+        <mat-form-field fxFlex>
+            <input type="password"
+                   fxFlex
+                   formControlName="{{fieldName}}"
+                   matInput
+                   [placeholder]="staticProperty.label"
+                   required
+                   [attr.data-cy]="fieldName"
+                   (blur)="emitUpdate()">
+            <mat-hint>{{staticProperty.description}}</mat-hint>
 
-                <mat-error *ngIf="!fieldValid">
-                    {{errorMessage}}
-                </mat-error>
-            </mat-form-field>
+            <mat-error *ngIf="!fieldValid">
+                {{errorMessage}}
+            </mat-error>
+        </mat-form-field>
     </div>
 </div>
