--- a/ui/src/app/core-ui/split-section/split-section.component.scss
+++ b/ui/src/app/core-ui/split-section/split-section.component.scss
@@ -16,16 +16,16 @@
  *
  */
 
-.title-section {
-  width: 300px;
+.split-section-title {
+  font-weight: bold;
+  font-size: 16pt;
 }
 
-.appearance-radio-group {
-  display: flex;
-  flex-direction: column;
-  margin: 15px 0;
+.split-section-description {
+  font-size: 12pt;
 }
 
-.appearance-radio-button {
-  margin: 5px;
+.split-section {
+  border-right: 2px solid gray;
+  margin-right: 15px;
 }
