--- a/ui/src/app/configuration/configuration.component.html
+++ b/ui/src/app/configuration/configuration.component.html
@@ -16,26 +16,32 @@
   ~
   -->
 
-<div fxLayout="column" fxFlex="100" class="page-container">
+<div fxLayout="column" class="page-container">
     <div fxLayout="row" class="p-0 sp-bg-lightgray page-container-nav">
         <div fxLayout="fill">
             <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="selectedIndexChange($event)"
                            color="accent">
-                <mat-tab label="Pipeline Element Configuration"></mat-tab>
+                <mat-tab label="DataLake"></mat-tab>
                 <mat-tab label="Messaging"></mat-tab>
-                <mat-tab
-                        label="DataLake"></mat-tab>
+                <mat-tab label="Pipeline Element Configuration"></mat-tab>
+                <mat-tab label="Security"></mat-tab>
             </mat-tab-group>
         </div>
     </div>
 
+    <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100">
     <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="selectedIndex == 0">
-        <pipeline-element-configuration fxFlex="100"></pipeline-element-configuration>
+        <sp-datalake-configuration fxFlex="100"></sp-datalake-configuration>
     </div>
     <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="selectedIndex == 1">
         <messaging-configuration fxFlex="100"></messaging-configuration>
     </div>
     <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="selectedIndex == 2">
-        <sp-datalake-configuration fxFlex="100"></sp-datalake-configuration>
+        <pipeline-element-configuration fxFlex="100"></pipeline-element-configuration>
     </div>
+    <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="selectedIndex == 3">
+        <sp-security-configuration fxFlex="100"></sp-security-configuration>
+    </div>
+    </div>
+
 </div>
