--- a/ui/src/app/configuration/messaging-configuration/messaging-configuration.component.html
+++ b/ui/src/app/configuration/messaging-configuration/messaging-configuration.component.html
@@ -16,83 +16,81 @@
   ~
   -->
 
-<div fxFlex="100" fxLayout="column" style="margin-top:40px;">
-    <div fxFlex="100" fxLayout="row wrap" fxLayoutAlign="start stretch">
-        <div fxFlex="100" class="assemblyOptions sp-blue-bg" style="padding:5px;">
-            <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
-                <h4>Kafka Settings</h4>
-                <span flex></span>
-            </div>
-        </div>
-        <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start" class="sp-blue-border page-container-padding-inner">
-            <form (ngSubmit)="updateMessagingSettings()" class="form-width" fxFlex="100" fxLayout="column" *ngIf="loadingCompleted">
-                <mat-form-field class="form-field" fxFlex="100">
-                    <input matInput [(ngModel)]="messagingSettings.batchSize"
-                           [placeholder]="'Batch Size'" type="text"
-                           [ngModelOptions]="{standalone: true}">
-                </mat-form-field>
-                <mat-form-field class="form-field" fxFlex="100">
-                    <input matInput [(ngModel)]="messagingSettings.messageMaxBytes"
-                           [placeholder]="'Message Max Bytes'" type="text"
-                           [ngModelOptions]="{standalone: true}">
-                </mat-form-field>
-                <mat-form-field class="form-field" fxFlex="100">
-                    <input matInput [(ngModel)]="messagingSettings.acks"
-                           [placeholder]="'Acks'" type="text"
-                           [ngModelOptions]="{standalone: true}">
-                </mat-form-field>
-                <mat-form-field class="form-field" fxFlex="100">
-                    <input matInput [(ngModel)]="messagingSettings.lingerMs"
-                           [placeholder]="'Linger MS'" type="text"
-                           [ngModelOptions]="{standalone: true}">
-                </mat-form-field>
-                <div fxLayoutAlign="end center">
-                    <button mat-raised-button color="accent" type="submit" class="md-raised md-primary submit-button">Update
-                    </button>
-                </div>
+<div fxLayout="row" class="page-container-padding">
+    <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start">
+        <sp-split-section title="Kafka Settings"
+                          subtitle="Manage Kafka settings for pipeline communication">
+            <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start" class="page-container-padding-inner">
+                <form (ngSubmit)="updateMessagingSettings()" class="form-width" fxFlex="100" fxLayout="column"
+                      *ngIf="loadingCompleted">
+                    <mat-form-field class="form-field" fxFlex="100">
+                        <input matInput [(ngModel)]="messagingSettings.batchSize"
+                               [placeholder]="'Batch Size'" type="text"
+                               [ngModelOptions]="{standalone: true}">
+                    </mat-form-field>
+                    <mat-form-field class="form-field" fxFlex="100">
+                        <input matInput [(ngModel)]="messagingSettings.messageMaxBytes"
+                               [placeholder]="'Message Max Bytes'" type="text"
+                               [ngModelOptions]="{standalone: true}">
+                    </mat-form-field>
+                    <mat-form-field class="form-field" fxFlex="100">
+                        <input matInput [(ngModel)]="messagingSettings.acks"
+                               [placeholder]="'Acks'" type="text"
+                               [ngModelOptions]="{standalone: true}">
+                    </mat-form-field>
+                    <mat-form-field class="form-field" fxFlex="100">
+                        <input matInput [(ngModel)]="messagingSettings.lingerMs"
+                               [placeholder]="'Linger MS'" type="text"
+                               [ngModelOptions]="{standalone: true}">
+                    </mat-form-field>
+                    <div fxLayoutAlign="start center" class="mt-10">
+                        <button mat-raised-button color="accent" type="submit"
+                                class="md-raised md-primary submit-button">Update
+                        </button>
+                    </div>
 
-            </form>
-        </div>
-
-    </div>
-    <div fxFlex="100" fxLayout="column" fxLayoutAlign="start stretch" style="margin-top:40px;">
-        <div fxFlex="100" class="assemblyOptions sp-blue-bg" style="padding:5px;">
-            <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
-                <h4>Message Formats</h4>
-                <span flex></span>
+                </form>
             </div>
-        </div>
-        <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start" class="sp-blue-border page-container-padding-inner">
-            <div cdkDropList class="data-format-list" (cdkDropListDropped)="drop($event)" *ngIf="loadingCompleted">
-                <div class="data-format-box" *ngFor="let format of messagingSettings.prioritizedFormats" cdkDrag>
-                    {{format}}
+        </sp-split-section>
+        <mat-divider></mat-divider>
+        <div class="mt-30">
+            <sp-split-section title="Message Formats"
+                              subtitle="Manage the priority of message formats used">
+                <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start" class="page-container-padding-inner">
+                    <div cdkDropList class="data-format-list" (cdkDropListDropped)="drop($event)"
+                         *ngIf="loadingCompleted">
+                        <div class="data-format-box" *ngFor="let format of messagingSettings.prioritizedFormats"
+                             cdkDrag>
+                            {{format}}
+                        </div>
+                    </div>
+                    <div fxLayoutAlign="start center" class="mt-10">
+                        <button mat-raised-button color="accent" type="submit"
+                                class="md-raised md-primary submit-button" (click)="updateMessagingSettings()">Update
+                        </button>
+                    </div>
                 </div>
-            </div>
-            <div fxLayoutAlign="end center">
-                <button mat-raised-button color="accent" type="submit" class="md-raised md-primary submit-button" (click)="updateMessagingSettings()">Update
-                </button>
-            </div>
+            </sp-split-section>
         </div>
-    </div>
-    <div fxFlex="100" fxLayout="column" fxLayoutAlign="start stretch" style="margin-top:40px;">
-        <div fxFlex="100" class="assemblyOptions sp-blue-bg" style="padding:5px;">
-            <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
-                <h4>Protocols</h4>
-                <span fxFlex></span>
-            </div>
-        </div>
-        <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start" class="sp-blue-border page-container-padding-inner">
-            <div cdkDropList class="data-format-list" (cdkDropListDropped)="dropProtocol($event)"
-                 *ngIf="loadingCompleted">
-                <div class="data-format-box" *ngFor="let protocol of messagingSettings.prioritizedProtocols" cdkDrag>
-                    {{protocol}}
+        <mat-divider></mat-divider>
+        <div class="mt-30">
+            <sp-split-section title="Protocols"
+                              subtitle="Manage the priority of protocols used">
+                <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start" class="page-container-padding-inner">
+                    <div cdkDropList class="data-format-list" (cdkDropListDropped)="dropProtocol($event)"
+                         *ngIf="loadingCompleted">
+                        <div class="data-format-box" *ngFor="let protocol of messagingSettings.prioritizedProtocols"
+                             cdkDrag>
+                            {{protocol}}
+                        </div>
+                    </div>
+                    <div fxLayoutAlign="start center" class="mt-10">
+                        <button mat-raised-button color="accent" type="submit"
+                                class="md-raised md-primary submit-button" (click)="updateMessagingSettings()">Update
+                        </button>
+                    </div>
                 </div>
-            </div>
-            <div fxLayoutAlign="end center">
-                <button mat-raised-button color="accent" type="submit" class="md-raised md-primary submit-button" (click)="updateMessagingSettings()">Update
-                </button>
-            </div>
+            </sp-split-section>
         </div>
-
     </div>
 </div>
