--- a/ui/src/app/configuration/security-configuration/security-service-configuration/security-service-config.component.scss
+++ b/ui/src/app/configuration/security-configuration/security-service-configuration/security-service-config.component.scss
@@ -16,7 +16,6 @@
  *
  */
 
-package org.apache.streampipes.model.client.security;
-
-public class Permission {
+.text-right {
+  text-align: right;
 }
