--- a/ui/src/app/configuration/security-configuration/security-user-configuration/security-user-config.component.scss
+++ b/ui/src/app/configuration/security-configuration/security-user-configuration/security-user-config.component.scss
@@ -16,11 +16,6 @@
  *
  */
 
-package org.apache.streampipes.model.client.security;
-
-public abstract class Subject {
-
-    protected String subjectId;
-
-
+.text-right {
+  text-align: right;
 }
