--- a/ui/src/scss/sp/widgets.scss
+++ b/ui/src/scss/sp/widgets.scss
@@ -39,3 +39,17 @@
   overflow-y: auto;
   overflow-x: auto;
 }
+
+.general-options-panel {
+  margin-top: 4px;
+  margin-bottom: 4px;
+  border: 1px solid var(--color-bg-3);
+  background: var(--color-bg-1);
+  padding: 5px;
+}
+
+.general-options-header {
+  margin-right: 10px;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
