[STREAMPIPES-43] Add group management

--- a/ui/src/app/configuration/security-configuration/security-configuration.component.html
+++ b/ui/src/app/configuration/security-configuration/security-configuration.component.html
@@ -33,4 +33,12 @@
         </sp-split-section>
     </div>
     <mat-divider></mat-divider>
+    <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start">
+        <sp-split-section title="Groups"
+                          subtitle="Manage user groups">
+            <div class="subsection-title">Existing groups</div>
+            <sp-security-user-group-config></sp-security-user-group-config>
+        </sp-split-section>
+    </div>
+    <mat-divider></mat-divider>
 </div>
